--- a/app/locales/de.json
+++ b/app/locales/de.json
@@ -34,6 +34,24 @@
   "hideLogs": "Protokolle ausblenden",
   "clearLogs": "Protokolle leeren",
 
+  "timeManagement": "Zeitmanagement",
+  "enableAt": "Einschalten um:",
+  "disableAt": "Ausschalten um:",
+  "advanced": "Erweitert",
+  "clear": "Löschen",
+  "cancel": "Abbrechen",
+  "advancedTimeSettings": "Erweiterte Zeiteinstellungen",
+  "customTime": "Benutzerdefiniert",
+  "wholeday": "Ganztägig",
+  "off": "Aus",
+  "monday": "Montag",
+  "tuesday": "Dienstag",
+  "wednesday": "Mittwoch",
+  "thursday": "Donnerstag",
+  "friday": "Freitag",
+  "saturday": "Samstag",
+  "sunday": "Sonntag",
+
   "initialPasswordTitle": "Initialpasswort",
   "initialPasswordDesc": "Dies ist das erste Mal, dass Sie die Anwendung ausführen. Bitte kopieren und speichern Sie dieses zufällig generierte Passwort an einem sicheren Ort.",
   "copyPassword": "In die Zwischenablage kopieren",
@@ -43,14 +61,21 @@
   "createStartMenuShortcut": "Startmenü-Shortcut erstellen",
   "createDesktopShortcut": "Desktop-Shortcut erstellen",
 
-  "toastInvalidPort": "Ungültige Portnummer",
   "toastLangSwitch": "Sprache auf {{lang}} geändert",
+
   "toastServerStarted": "Server auf Port {{port}} gestartet",
   "toastServerStopped": "Server erfolgreich angehalten",
+  "toastInvalidPort": "Ungültige Portnummer",
+
+  "toastTimeSettingsSaved": "Zeiteinstellungen erfolgreich gespeichert.",
+  "confirmClearSettings": "Sind Sie sicher, dass Sie alle Zeitmanagement-Einstellungen löschen möchten? Dies kann nicht rückgängig gemacht werden.",
+  "toastSettingsCleared": "Zeiteinstellungen wurden gelöscht.",
+
   "toastPasswordIncorrect": "Falsches Passwort",
   "toastPasswordEmpty": "Neues Passwort darf nicht leer sein",
   "toastPasswordUpdated": "Passwort erfolgreich aktualisiert",
   "toastPasswordCopied": "Passwort in die Zwischenablage kopiert",
+
   "toastShortcutCreated": "{{type}}-Shortcut erstellt",
   "toastShortcutFailed": "Erstellen von {{type}}-Shortcut fehlgeschlagen"
 }
