--- a/src/renderer/locales/de.json
+++ b/src/renderer/locales/de.json
@@ -1,5 +1,5 @@
 {
-  "title": "Server-Bedienfeld",
+  "title": "InStep Server-Bedienfeld",
   "toggleTheme": "Theme wechseln",
   "toastLangSwitch": "Sprache auf {{lang}} geändert",
 
