--- a/src/renderer/locales/en.json
+++ b/src/renderer/locales/en.json
@@ -1,5 +1,5 @@
 {
-  "title": "Server Control Panel",
+  "title": "InStep Server Control Panel",
   "toggleTheme": "Toggle Theme",
   "toastLangSwitch": "Switched language to {{lang}}",
 
